solved the bug of not showing bg image in production

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,10 +1,10 @@
 .hero {
-  background: linear-gradient(
+  background-image: linear-gradient(
       90deg,
       rgba(126, 144, 254, 0.05) 0%,
       rgba(152, 115, 255, 0.05) 100%
     ),
-    url("./assets/All Images/Vector.png");
+    url("/assets/All Images/Vector.png");
   background-repeat: no-repeat;
   background-position: left bottom;
 
