--- a/src/scss/util/_reuse.scss
+++ b/src/scss/util/_reuse.scss
@@ -13,9 +13,9 @@
 .btn-primary {
   background: linear-gradient(90deg, #7e90fe 0%, #9873ff 100%);
   border-radius: 8px;
-  padding: 1.2rem 1.8rem;
+  padding: 1rem 1.5rem;
   font-weight: 800;
-  font-size: 20px;
+  font-size: 1.2rem;
   color: #ffffff;
   cursor: pointer;
 }
